--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "connect": "^3.7.0",
+    "connect-mongo": "^3.2.0",
     "connect-mongodb": "^1.1.5",
+    "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "css": "^2.2.4",
     "express": "^4.16.3",
@@ -28,6 +32,7 @@
     "mongoose": "^5.2.6",
     "morgan": "^1.9.0",
     "serve-favicon": "^2.5.0",
+    "session-file-store": "^1.4.0",
     "socket.io-client": "^2.1.1",
     "socketio": "^1.0.0",
     "vue": "^2.5.2",
